--- a/app/package.json
+++ b/app/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "ethers": "^6.13.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
